tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__readme_example_hooks_post_create.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
🔄 [36mRunning project post-create [1minstall[22m:[39m
[107m [0m  [2m[0m[2m[34muv[0m[2m sync[0m

  Resolved 24 packages in 145ms
  Installed 24 packages in 1.2s
✅ [32m[32mCreated new worktree for [1mfeature-x[22m from [1mmain[22m at [1m[TMPDIR]/repo.feature-x[39m[22m[39m
🔄 [36mRunning project post-start [1mdev[22m:[39m
[107m [0m  [2m[0m[2m[34muv[0m[2m run dev[0m
