tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__readme_example_remove.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
🔄 [36m[36mRemoving [1mfeature-api[22m worktree & branch in background (ancestor of main)[39m[39m
