tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__readme_example_switch_back.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
✅ [32m[32mSwitched to worktree for [1mfeature-api[22m at [1m[TMPDIR]/repo.feature-api[39m[22m[39m
