tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__source_flag_error_passthrough.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
[1m[31merror:[0m unrecognized subcommand '[1m[33mfoo[0m'

  [1m[32mtip:[0m a similar subcommand exists: '[1m[32mhook[0m'

[1m[32mUsage:[0m [1m[36mwt[0m [36m[OPTIONS][0m [36m[COMMAND][0m

For more information, try '[1m[36m--help[0m'.
