tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__step_for_each.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
🔄 [36mRunning in [1mmain[22m...[39m
Branch: main
🔄 [36mRunning in [1mfeature-a[22m...[39m
Branch: feature-a
🔄 [36mRunning in [1mfeature-b[22m...[39m
Branch: feature-b

✅ [32mCompleted in 3 worktrees[39m
